--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.0.1",
     "@angular/router": "^15.0.1",
     "moment": "^2.29.4",
+    "ngx-mask": "^14.2.4",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.1",
     "zone.js": "^0.12.0"
